All_Component_DX/force-app/main/default/objects/Offline_Log__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Type of activity performed by the user</description>
    <inlineHelpText>Type of activity performed by the user</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Force Config Download</fullName>
            </value>
            <value>
                <fullName>Auto Config Download</fullName>
            </value>
            <value>
                <fullName>Manual Config Download</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Update Record</fullName>
            </value>
            <value>
                <fullName>Delete Record</fullName>
            </value>
            <value>
                <fullName>Logout</fullName>
            </value>
            <value>
                <fullName>Start Synch</fullName>
            </value>
            <value>
                <fullName>Cancel Synch</fullName>
            </value>
            <value>
                <fullName>Print Report</fullName>
            </value>
            <value>
                <fullName>Export Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>