All_Component_DX/force-app/main/default/objects/Offline_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API name of the Salesforce object related to the activity</description>
    <inlineHelpText>API name of the Salesforce object related to the activity</inlineHelpText>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>