All_Component_DX/force-app/main/default/objects/Offline_Log__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Timestamp when the user started the activity</description>
    <inlineHelpText>Timestamp when the user started the activity</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>