All_Component_DX/force-app/main/default/objects/Offline_Log__c/fields/User_Profile__c.field-meta.xml
<CustomField>
    <fullName>User_Profile__c</fullName>
    <description>User&apos;s salesforce profile at the time of the activity</description>
    <inlineHelpText>User&apos;s salesforce profile at the time of the activity</inlineHelpText>
    <label>User Profile</label>
    <length>150</length>
    <type>Text</type>
</CustomField>